--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /*  your css code here. If applicable */
 #yellow { background: yellow;
 		 border-width: 1px;
-		 border-color: green
+		 border-color: green;
+		 border-top-style: solid
 }
 
 #red {background: red;
